Added more option
Added more option

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <script src="index.js"></script>
     <p>Open debug menu (F12)</p>
+    <p>To set the length of the list type "length = x" to set the length of the list "createList()" to see list type "list" to set the number you want to find type "number = y" then "sort()" </p>
 </body>
 
 </html>
